fixed alignment on account page

--- a/rails/public/stylesheets/nomtracker.css
+++ b/rails/public/stylesheets/nomtracker.css
@@ -478,7 +478,6 @@ div.autocomplete ul li {
 #email_addresses ul {
 	list-style: none;
 	width: 100%;
-	margin: 0 10px;
 }
 
 #email_addresses li {
